	their job or avatar changed.
	* `mapmemory` table now stores spawn points. GameCharacter methods and
	script bindings updated accordingly.
	* Added "free market" and "happyville" to list of warpable maps for the
	!town command.
	* Added !jail command.
	* Accumulate infractions if a player tries replenishing HP without a pause
	after flinching (attacking, getting hurt, or casting skills) or moving.

2013-01-12  GoldenKevin  (revision 187)

	* Removed !cpu debug command.
	* Commands on offline characters only work on characters in the same world
	as the caller character.
	* Added "ariant" to list of warpable maps for the !town command.
	* Omok pieces may not be laid on top of each other.
	* Fixed each hit on a mob counting as a whole mob killed for quest purposes.
	* Stubs for high damage auto ban.

2013-01-12  GoldenKevin  (revision 188)

	* Eliminated potential for race conditions when making events where only one
	instance can be running at a time.
	* Fixed portals/q2073.js allowing multiple players to enter the map. 
	* events/pigFarm.js now spawns players in the correct destination portal.
	* Descriptions for portal scripts now list the portal name instead of the
	script name.
	* Eliminated unused portal scripts.
	* NLC subway schedule shortened to six minutes.

2013-01-13  GoldenKevin  (revision 189)

	* Fixed White Knight charge buffs crashing other players in the map.
	* Fixed White Knight Charged Blow not canceling charge buff according to
	level of Paladin's Advanced Charged Blow skill.
	* 0x63 and 0x5B are now no-op opcodes. They do not need to be handled but
	they were taking up many lines on game server logs.
	* Fixed Chakra and skills that go through BuffHandler but have a duration
	of zero (e.g. Monster Magnet) crashing other players in the map.

Copyright 2011-2012 GoldenKevin
Copying and distribution of this file, with or without modification, are
permitted provided the copyright notice and this notice are preserved.