@@ -172,7 +172,7 @@ public class ClientListener<T extends RemoteClient> implements SessionCreator {
 																	ClientEncryption.aesOfbCrypt(body, iv);
 																	ClientEncryption.mapleDecrypt(body);
 																	pp.process(new LittleEndianByteArrayReader(body), session.getClient());
-																} catch (Exception ex) {
+																} catch (Throwable ex) {
 																	LOG.log(Level.WARNING, "Uncaught exception while processing packet from client " + session.getAccountName() + " (" + session.getAddress() + ")", ex);
 																} finally {
 																	session.readDequeued();
